// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render install page 1`] = `
.c0 {
  padding: 0;
  width: 840px;
  margin: 20px auto;
}

.c1 {
  display: inline-block;
  background: no-repeat center/contain url('img/logo.png');
  width: 123px;
  height: 60px;
  -webkit-filter: none;
  filter: none;
}

.c2 {
  margin-bottom: 2rem;
}

.c3 {
  font-family: Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
  font-size: 1.25rem;
}

.c4 {
  margin-left: 0.5rem;
}

.c7 {
  font-size: .875rem;
  margin-bottom: 1rem;
}

.c7 li {
  margin-bottom: 0.5rem;
}

.c7 code {
  font-size: .75rem;
  font-family: Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
  background-color: #f5f2f0;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
}

.c12 .c13 + .c13 {
  margin-left: 1rem;
}

.c24 {
  margin: 0 0.5rem;
  width: 0.25rem;
  height: 100%;
  background: linear-gradient( 180deg, transparent 20%, #DDD 20%, #DDD 80%, transparent 80% );
}

.c26 {
  text-align: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 380px;
  height: 32px;
  padding: 0.25rem 0.5rem;
  color: #000000;
  background-color: #f5f5f5;
  cursor: pointer;
}

.c8:focus,
.c8:hover {
  -webkit-filter: brightness(110%);
  filter: brightness(110%);
}

.c9 {
  width: 32px;
}

.c10 {
  font-size: 1rem;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c23 {
  padding: 0.5rem;
  background-color: transparent;
  border: solid 1px;
  border-radius: 0.25rem;
  cursor: pointer;
}

.c23:hover:not(:disabled),
.c23:focus:not(:disabled) {
  color: #007BFF;
  border-color: #007BFF;
  outline-color: #007BFF;
}

.c25 {
  margin-right: 0.25rem;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 0.5rem;
  border-radius: 0.25rem;
}

.c16 {
  font-size: 1.125rem;
  margin: 0.5rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c21 {
  margin-left: 0.5rem;
  font-size: .875rem;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  color: #666;
}

.c17 {
  padding: 0.25rem;
  font-size: 1.125rem;
  width: 100%;
  border: 1px solid;
  border-color: inherit;
}

.c22 {
  color: #F44336;
  margin-left: 0.25rem;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c20 {
  position: relative;
  margin-left: -1.5rem;
  font-size: 1.125rem;
  cursor: pointer;
}

.c5 {
  margin-left: 2.25rem;
  margin-bottom: 2.25rem;
}

.c6 {
  border: 1px solid #4338CA;
  color: #4338CA;
  margin-bottom: 1rem;
}

<body>
  <div>
    <div
      class="c0"
    >
      <header>
        <a
          href="/"
        >
          <div
            class="c1"
          />
        </a>
      </header>
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Install Function
        </h2>
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <div
              class="c6"
            >
              <ul
                class="c7"
              >
                <li>
                  Sharing this URL makes others can use this function.
                </li>
                <li>
                  You can edit the code and every fields before installation.
                </li>
              </ul>
            </div>
            <div
              class="c8"
              tabindex="-1"
            >
              <div
                class="c9"
              />
              <div
                class="c10"
              >
                Markdown: [title](url)
              </div>
            </div>
            <form>
              <div
                class="c11"
              >
                <div
                  class="c12"
                >
                  <div
                    class="c13 c14"
                  >
                    <div
                      class="c15"
                    >
                      <label
                        class="c16"
                        for="name"
                      >
                        Name
                      </label>
                      <input
                        class="c17"
                        id="name"
                        name="name"
                        placeholder=""
                        type="text"
                        value="Markdown: [title](url)"
                      />
                    </div>
                  </div>
                  <div
                    class="c13 c18"
                    style="width: 9rem;"
                  >
                    <div
                      class="c15"
                    >
                      <label
                        class="c16"
                        for="color"
                      >
                        Color
                      </label>
                      <div
                        class="c19"
                      >
                        <input
                          class="c17"
                          id="color"
                          maxlength="7"
                          name="color"
                          pattern="#([0-9A-Fa-f]{3}|[0-9A-Fa-f]{6})"
                          placeholder="#F0F0F0"
                          type="text"
                          value="#f5f5f5"
                        />
                        <div
                          class="c20"
                        >
                          <svg
                            aria-hidden="true"
                            class="svg-inline--fa fa-palette "
                            data-icon="palette"
                            data-prefix="fas"
                            focusable="false"
                            role="img"
                            viewBox="0 0 512 512"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M512 255.1C512 256.9 511.1 257.8 511.1 258.7C511.6 295.2 478.4 319.1 441.9 319.1H344C317.5 319.1 296 341.5 296 368C296 371.4 296.4 374.7 297 377.9C299.2 388.1 303.5 397.1 307.9 407.8C313.9 421.6 320 435.3 320 449.8C320 481.7 298.4 510.5 266.6 511.8C263.1 511.9 259.5 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256V255.1zM96 255.1C78.33 255.1 64 270.3 64 287.1C64 305.7 78.33 319.1 96 319.1C113.7 319.1 128 305.7 128 287.1C128 270.3 113.7 255.1 96 255.1zM128 191.1C145.7 191.1 160 177.7 160 159.1C160 142.3 145.7 127.1 128 127.1C110.3 127.1 96 142.3 96 159.1C96 177.7 110.3 191.1 128 191.1zM256 63.1C238.3 63.1 224 78.33 224 95.1C224 113.7 238.3 127.1 256 127.1C273.7 127.1 288 113.7 288 95.1C288 78.33 273.7 63.1 256 63.1zM384 191.1C401.7 191.1 416 177.7 416 159.1C416 142.3 401.7 127.1 384 127.1C366.3 127.1 352 142.3 352 159.1C352 177.7 366.3 191.1 384 191.1z"
                              fill="currentColor"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c12"
                >
                  <div
                    class="c15"
                  >
                    <label
                      class="c16"
                      for="pattern"
                    >
                      URL Pattern
                      <span
                        class="c21"
                      >
                        <span>
                          (optional) This function will be displayed if the URL matches.
                        </span>
                      </span>
                    </label>
                    <input
                      class="c17"
                      id="pattern"
                      name="pattern"
                      placeholder=".*"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="c12"
                >
                  <div
                    class="c15"
                  >
                    <label
                      class="c16"
                      for="code"
                    >
                      Code
                      <span
                        class="c21"
                      >
                        Must be a single function.
                      </span>
                    </label>
                    <div
                      style="position: relative; text-align: left; box-sizing: border-box; padding: 0px; overflow: hidden; font-size: 1rem; font-family: Menlo, Monaco, Consolas, \\"Liberation Mono\\", \\"Courier New\\", monospace; background-color: rgb(245, 242, 240);"
                    >
                      <textarea
                        autocapitalize="off"
                        autocomplete="off"
                        autocorrect="off"
                        class="npm__react-simple-code-editor__textarea editor-additional-styles"
                        data-gramm="false"
                        id="code"
                        spellcheck="false"
                        style="margin: 0px; border: 0px; background: none; box-sizing: inherit; display: inherit; font-family: inherit; font-style: inherit; font-variant-ligatures: inherit; font-weight: inherit; letter-spacing: inherit; line-height: inherit; tab-size: inherit; text-indent: inherit; text-rendering: inherit; text-transform: inherit; white-space: pre-wrap; word-break: keep-all; overflow-wrap: break-word; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; resize: none; overflow: hidden; padding: 0.5rem 0.5rem 0.5rem 0.5rem;"
                      >
                        /**
 * Copy link as Markdown.
 */
({title, url}) =&gt; {
  const escaped = title.replace(/[\\[\\]]/g, '\\\\$&');
  return \`[\${escaped}](\${url})\`;
};
                      </textarea>
                      <pre
                        aria-hidden="true"
                        class="editor-additional-styles"
                        style="margin: 0px; border: 0px; background: none; box-sizing: inherit; display: inherit; font-family: inherit; font-style: inherit; font-variant-ligatures: inherit; font-weight: inherit; letter-spacing: inherit; line-height: inherit; tab-size: inherit; text-indent: inherit; text-rendering: inherit; text-transform: inherit; white-space: pre-wrap; word-break: keep-all; overflow-wrap: break-word; position: relative; pointer-events: none; padding: 0.5rem 0.5rem 0.5rem 0.5rem;"
                      >
                        <span
                          class="token comment"
                        >
                          /**
 * Copy link as Markdown.
 */
                        </span>
                        

                        <span
                          class="token punctuation"
                        >
                          (
                        </span>
                        <span
                          class="token parameter"
                        >
                          <span
                            class="token punctuation"
                          >
                            {
                          </span>
                          title
                          <span
                            class="token punctuation"
                          >
                            ,
                          </span>
                           url
                          <span
                            class="token punctuation"
                          >
                            }
                          </span>
                        </span>
                        <span
                          class="token punctuation"
                        >
                          )
                        </span>
                         
                        <span
                          class="token operator"
                        >
                          =&gt;
                        </span>
                         
                        <span
                          class="token punctuation"
                        >
                          {
                        </span>
                        
  
                        <span
                          class="token keyword"
                        >
                          const
                        </span>
                         escaped 
                        <span
                          class="token operator"
                        >
                          =
                        </span>
                         title
                        <span
                          class="token punctuation"
                        >
                          .
                        </span>
                        <span
                          class="token function"
                        >
                          replace
                        </span>
                        <span
                          class="token punctuation"
                        >
                          (
                        </span>
                        <span
                          class="token regex"
                        >
                          <span
                            class="token regex-delimiter"
                          >
                            /
                          </span>
                          <span
                            class="token regex-source language-regex"
                          >
                            [\\[\\]]
                          </span>
                          <span
                            class="token regex-delimiter"
                          >
                            /
                          </span>
                          <span
                            class="token regex-flags"
                          >
                            g
                          </span>
                        </span>
                        <span
                          class="token punctuation"
                        >
                          ,
                        </span>
                         
                        <span
                          class="token string"
                        >
                          '\\\\$&'
                        </span>
                        <span
                          class="token punctuation"
                        >
                          )
                        </span>
                        <span
                          class="token punctuation"
                        >
                          ;
                        </span>
                        
  
                        <span
                          class="token keyword"
                        >
                          return
                        </span>
                         
                        <span
                          class="token template-string"
                        >
                          <span
                            class="token template-punctuation string"
                          >
                            \`
                          </span>
                          <span
                            class="token string"
                          >
                            [
                          </span>
                          <span
                            class="token interpolation"
                          >
                            <span
                              class="token interpolation-punctuation punctuation"
                            >
                              \${
                            </span>
                            escaped
                            <span
                              class="token interpolation-punctuation punctuation"
                            >
                              }
                            </span>
                          </span>
                          <span
                            class="token string"
                          >
                            ](
                          </span>
                          <span
                            class="token interpolation"
                          >
                            <span
                              class="token interpolation-punctuation punctuation"
                            >
                              \${
                            </span>
                            url
                            <span
                              class="token interpolation-punctuation punctuation"
                            >
                              }
                            </span>
                          </span>
                          <span
                            class="token string"
                          >
                            )
                          </span>
                          <span
                            class="token template-punctuation string"
                          >
                            \`
                          </span>
                        </span>
                        <span
                          class="token punctuation"
                        >
                          ;
                        </span>
                        

                        <span
                          class="token punctuation"
                        >
                          }
                        </span>
                        <span
                          class="token punctuation"
                        >
                          ;
                        </span>
                        <br />
                      </pre>
                      <style
                        type="text/css"
                      >
                        
/**
 * Reset the text fill color so that placeholder is visible
 */
.npm__react-simple-code-editor__textarea:empty {
  -webkit-text-fill-color: inherit !important;
}

/**
 * Hack to apply on some CSS on IE10 and IE11
 */
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  /**
    * IE doesn't support '-webkit-text-fill-color'
    * So we use 'color: transparent' to make the text transparent on IE
    * Unlike other browsers, it doesn't affect caret color in IE
    */
  .npm__react-simple-code-editor__textarea {
    color: transparent !important;
  }

  .npm__react-simple-code-editor__textarea::selection {
    background-color: #accef7 !important;
    color: transparent !important;
  }
}

                      </style>
                    </div>
                    <span
                      class="c22"
                    />
                  </div>
                </div>
                <div
                  class="c12"
                >
                  <div
                    class="c13 c18"
                  >
                    <button
                      class="c23"
                      type="button"
                    >
                      Install
                    </button>
                  </div>
                  <div
                    class="c13 c18"
                  >
                    <div
                      class="c24"
                    />
                  </div>
                  <div
                    class="c13 c18"
                  >
                    <button
                      class="c23"
                      type="button"
                    >
                      <i
                        class="c25"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-share-from-square "
                          data-icon="share-from-square"
                          data-prefix="fas"
                          focusable="false"
                          role="img"
                          viewBox="0 0 576 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M568.9 143.5l-150.9-138.2C404.8-6.773 384 3.039 384 21.84V96C241.2 97.63 128 126.1 128 260.6c0 54.3 35.2 108.1 74.08 136.2c12.14 8.781 29.42-2.238 24.94-16.46C186.7 252.2 256 224 384 223.1v74.2c0 18.82 20.84 28.59 34.02 16.51l150.9-138.2C578.4 167.8 578.4 152.2 568.9 143.5zM416 384c-17.67 0-32 14.33-32 32v31.1l-320-.0013V128h32c17.67 0 32-14.32 32-32S113.7 64 96 64H64C28.65 64 0 92.65 0 128v319.1c0 35.34 28.65 64 64 64l320-.0013c35.35 0 64-28.66 64-64V416C448 398.3 433.7 384 416 384z"
                            fill="currentColor"
                          />
                        </svg>
                      </i>
                      Update URL
                    </button>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Hints
        </h2>
        <div
          class="c4"
        >
          <ul
            class="c7"
          >
            <li>
              The code must be a single function that returns a string value to copy.
            </li>
            <li>
              <b>
                *BETA*
              </b>
               Returning
               
              <code>
                {
                "html":"...","text": "..."
                }
              </code>
               
              to copy as rich text & plain text. This interface may change in future.
            </li>
            <li>
              <code>
                render(template, view)
              </code>
               - You can render
               
              <a
                href="https://github.com/janl/mustache.js"
                rel="noreferrer noopener"
                target="_blank"
              >
                mustache
              </a>
               
              templates.
            </li>
            <li>
              <code>
                new DOMParser().parseFromString(content, 'text/html')
              </code>
              - You can use
               
              <a
                href="https://developer.mozilla.org/docs/Web/API/DOMParser"
                rel="noreferrer noopener"
                target="_blank"
              >
                <code>
                  DOMParser
                </code>
              </a>
               
              to query the page document.
            </li>
            <li>
              To feedback an error, use 
              <code>
                throw new Error(...)
              </code>
              . It will appear at the function that produced the error.
            </li>
            <li>
              The code runs safely under the
               
              <a
                href="https://developer.chrome.com/apps/sandboxingEval"
                rel="noreferrer noopener"
                target="_blank"
              >
                sandbox
              </a>
              , not under the page.
            </li>
            <li>
              Visit
               
              <a
                href="https://github.com/pokutuna/chrome-cocopy/blob/master/gallery/README.md"
                rel="noreferrer noopener"
                target="_blank"
              >
                Function Gallery
              </a>
               
              to find new function and see sample codes.
            </li>
          </ul>
        </div>
      </div>
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Links
        </h2>
        <div
          class="c4"
        >
          <ul
            class="c7"
          >
            <li>
              <a
                href="https://chrome.google.com/webstore/detail/cocopy/ihnfodlbkhgjnbheemjhkjfkfglgbdgc"
                rel="noreferrer noopener"
                target="_blank"
              >
                Chrome Web Store
              </a>
            </li>
            <li>
              <a
                href="https://github.com/pokutuna/chrome-cocopy"
                rel="noreferrer noopener"
                target="_blank"
              >
                GitHub Repository
              </a>
            </li>
            <li>
              <a
                href="https://github.com/pokutuna/chrome-cocopy/blob/master/gallery/README.md"
                rel="noreferrer noopener"
                target="_blank"
              >
                Function Gallery
              </a>
            </li>
            <li>
              <a
                href="./licenses.txt"
                rel="noreferrer noopener"
                target="_blank"
              >
                Copyright Notice
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="c26"
      >
        Build v0.0.0
      </div>
    </div>
  </div>
</body>
`;

exports[`render options 1`] = `
.c0 {
  padding: 0;
  width: 840px;
  margin: 20px auto;
}

.c1 {
  display: inline-block;
  background: no-repeat center/contain url('img/logo.png');
  width: 123px;
  height: 60px;
  -webkit-filter: none;
  filter: none;
}

.c2 {
  margin-bottom: 2rem;
}

.c3 {
  font-family: Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
  font-size: 1.25rem;
}

.c4 {
  margin-left: 0.5rem;
}

.c15 {
  font-size: .875rem;
  margin-bottom: 1rem;
}

.c15 li {
  margin-bottom: 0.5rem;
}

.c15 code {
  font-size: .75rem;
  font-family: Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
  background-color: #f5f2f0;
}

.c16 {
  text-align: center;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 380px;
  height: 32px;
  padding: 0.25rem 0.5rem;
  color: #010203;
  background-color: #FFF;
  cursor: pointer;
}

.c13:focus,
.c13:hover {
  -webkit-filter: brightness(110%);
  filter: brightness(110%);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 380px;
  height: 32px;
  padding: 0.25rem 0.5rem;
  color: #000000;
  background-color: #f5f5f5;
  cursor: pointer;
}

.c7:focus,
.c7:hover {
  -webkit-filter: brightness(110%);
  filter: brightness(110%);
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 380px;
  height: 32px;
  padding: 0.25rem 0.5rem;
  color: #FFFFFF;
  background-color: #ff5722;
  cursor: pointer;
}

.c11:focus,
.c11:hover {
  -webkit-filter: brightness(110%);
  filter: brightness(110%);
}

.c8 {
  width: 32px;
}

.c9 {
  font-size: 1rem;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c14 {
  border: 1px solid #010203;
}

.c14:hover {
  color: #007BFF;
  border-color: #007BFF;
}

.c5 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.25rem;
  height: 32px;
  cursor: pointer;
}

.c10 {
  width: 2.25rem;
  opacity: 1;
  cursor: move;
}

.c12 {
  margin-top: 0.5rem;
}

<body>
  <div>
    <div
      class="c0"
    >
      <header>
        <a
          href="/"
        >
          <div
            class="c1"
          />
        </a>
      </header>
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Functions
        </h2>
        <div
          class="c4"
        >
          <div>
            <div
              class="c5"
            >
              <div
                class="c6"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-caret-right fa-lg "
                  data-icon="caret-right"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 256 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M118.6 105.4l128 127.1C252.9 239.6 256 247.8 256 255.1s-3.125 16.38-9.375 22.63l-128 127.1c-9.156 9.156-22.91 11.9-34.88 6.943S64 396.9 64 383.1V128c0-12.94 7.781-24.62 19.75-29.58S109.5 96.23 118.6 105.4z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="c7"
                tabindex="-1"
              >
                <div
                  class="c8"
                />
                <div
                  class="c9"
                >
                  Markdown: [title](url)
                </div>
              </div>
              <div
                draggable="true"
              >
                <div
                  class="c6 c10"
                  draggable="true"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-bars "
                    data-icon="bars"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 96C0 78.33 14.33 64 32 64H416C433.7 64 448 78.33 448 96C448 113.7 433.7 128 416 128H32C14.33 128 0 113.7 0 96zM0 256C0 238.3 14.33 224 32 224H416C433.7 224 448 238.3 448 256C448 273.7 433.7 288 416 288H32C14.33 288 0 273.7 0 256zM416 448H32C14.33 448 0 433.7 0 416C0 398.3 14.33 384 32 384H416C433.7 384 448 398.3 448 416C448 433.7 433.7 448 416 448z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="c5"
            >
              <div
                class="c6"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-caret-right fa-lg "
                  data-icon="caret-right"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 256 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M118.6 105.4l128 127.1C252.9 239.6 256 247.8 256 255.1s-3.125 16.38-9.375 22.63l-128 127.1c-9.156 9.156-22.91 11.9-34.88 6.943S64 396.9 64 383.1V128c0-12.94 7.781-24.62 19.75-29.58S109.5 96.23 118.6 105.4z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="c11"
                tabindex="-1"
              >
                <div
                  class="c8"
                />
                <div
                  class="c9"
                >
                  HTML: &lt;a href={url}&gt;{title}&lt;/a&gt;
                </div>
              </div>
              <div
                draggable="true"
              >
                <div
                  class="c6 c10"
                  draggable="true"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-bars "
                    data-icon="bars"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 96C0 78.33 14.33 64 32 64H416C433.7 64 448 78.33 448 96C448 113.7 433.7 128 416 128H32C14.33 128 0 113.7 0 96zM0 256C0 238.3 14.33 224 32 224H416C433.7 224 448 238.3 448 256C448 273.7 433.7 288 416 288H32C14.33 288 0 273.7 0 256zM416 448H32C14.33 448 0 433.7 0 416C0 398.3 14.33 384 32 384H416C433.7 384 448 398.3 448 416C448 433.7 433.7 448 416 448z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c12"
          >
            <div
              class="c5"
            >
              <div
                class="c6"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-plus "
                  data-icon="plus"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M432 256c0 17.69-14.33 32.01-32 32.01H256v144c0 17.69-14.33 31.99-32 31.99s-32-14.3-32-31.99v-144H48c-17.67 0-32-14.32-32-32.01s14.33-31.99 32-31.99H192v-144c0-17.69 14.33-32.01 32-32.01s32 14.32 32 32.01v144h144C417.7 224 432 238.3 432 256z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="c13 c14"
              >
                <div
                  class="c8"
                />
                <div
                  class="c9"
                >
                  Create New Function
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Hints
        </h2>
        <div
          class="c4"
        >
          <ul
            class="c15"
          >
            <li>
              The code must be a single function that returns a string value to copy.
            </li>
            <li>
              <b>
                *BETA*
              </b>
               Returning
               
              <code>
                {
                "html":"...","text": "..."
                }
              </code>
               
              to copy as rich text & plain text. This interface may change in future.
            </li>
            <li>
              <code>
                render(template, view)
              </code>
               - You can render
               
              <a
                href="https://github.com/janl/mustache.js"
                rel="noreferrer noopener"
                target="_blank"
              >
                mustache
              </a>
               
              templates.
            </li>
            <li>
              <code>
                new DOMParser().parseFromString(content, 'text/html')
              </code>
              - You can use
               
              <a
                href="https://developer.mozilla.org/docs/Web/API/DOMParser"
                rel="noreferrer noopener"
                target="_blank"
              >
                <code>
                  DOMParser
                </code>
              </a>
               
              to query the page document.
            </li>
            <li>
              To feedback an error, use 
              <code>
                throw new Error(...)
              </code>
              . It will appear at the function that produced the error.
            </li>
            <li>
              The code runs safely under the
               
              <a
                href="https://developer.chrome.com/apps/sandboxingEval"
                rel="noreferrer noopener"
                target="_blank"
              >
                sandbox
              </a>
              , not under the page.
            </li>
            <li>
              Visit
               
              <a
                href="https://github.com/pokutuna/chrome-cocopy/blob/master/gallery/README.md"
                rel="noreferrer noopener"
                target="_blank"
              >
                Function Gallery
              </a>
               
              to find new function and see sample codes.
            </li>
          </ul>
        </div>
      </div>
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Debugging
        </h2>
        <div
          class="c4"
        >
          <ul
            class="c15"
          >
            <li>
              To open the developer console by right clicking on the popup & selecting "Inspect"
            </li>
            <li>
              You can find the code on the "Sources" panel, in
               
              <code>
                sandbox.html
              </code>
               &gt; 
              <code>
                (no domain)
              </code>
               after executing it.
            </li>
            <li>
              You also can use 
              <code>
                debugger;
              </code>
               in the code.
            </li>
          </ul>
        </div>
      </div>
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Links
        </h2>
        <div
          class="c4"
        >
          <ul
            class="c15"
          >
            <li>
              <a
                href="https://chrome.google.com/webstore/detail/cocopy/ihnfodlbkhgjnbheemjhkjfkfglgbdgc"
                rel="noreferrer noopener"
                target="_blank"
              >
                Chrome Web Store
              </a>
            </li>
            <li>
              <a
                href="https://github.com/pokutuna/chrome-cocopy"
                rel="noreferrer noopener"
                target="_blank"
              >
                GitHub Repository
              </a>
            </li>
            <li>
              <a
                href="https://github.com/pokutuna/chrome-cocopy/blob/master/gallery/README.md"
                rel="noreferrer noopener"
                target="_blank"
              >
                Function Gallery
              </a>
            </li>
            <li>
              <a
                href="./licenses.txt"
                rel="noreferrer noopener"
                target="_blank"
              >
                Copyright Notice
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="c16"
      >
        Build v0.0.0
      </div>
    </div>
  </div>
</body>
`;
